--- a/test/fixtures/ideas.yml
+++ b/test/fixtures/ideas.yml
@@ -3,9 +3,9 @@
 one:
   title: MyString
   body: MyString
-  quality: 1
+  quality: swill
 
 two:
   title: MyString
   body: MyString
-  quality: 1
+  quality: swill
